--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 body{
   background-color: #23253A;
+  scroll-behavior: smooth;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 @tailwind base;
 @tailwind components;
